5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4171/executions/1807_2567.log
== TEST (2019-06-09 18:01:32) 
-- CODE:
import numpy as np

x = np.array(eval(input("")))

for i in x:
	print(x-i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import numpy as np
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:02:04) 
-- CODE:
import numpy as np

x = np.array(eval(input("")))

for i in range(size(x)):
	a = "*"
	print(a)*i
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import numpy as np
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:02:16) 
-- CODE:
import numpy as np

x = np.array(eval(input("")))

for i in range(np.size(x)):
	a = "*"
	print(a)*i
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import numpy as np
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:02:26) 
-- CODE:
import numpy as np

x = np.array(eval(input("")))

for i in range(np.size(x)):
	a = "*"
	print(a*i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import numpy as np
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 18:02:30) 
-- CODE:
import numpy as np

x = np.array(eval(input("")))

for i in range(np.size(x)):
	a = "*"
	print(a*i)
-- EXECUTION TIME:
1.64843
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:

-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:

-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:02:30) 
-- CODE:
import numpy as np

x = np.array(eval(input("")))

for i in range(np.size(x)):
	a = "*"
	print(a*i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import numpy as np
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:02:33) 
-- CODE:
import numpy as np

x = np.array(eval(input("")))

for i in range(np.size(x)):
	a = "*"
	print(a*i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import numpy as np
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:02:36) 
-- CODE:
import numpy as np

x = np.array(eval(input("")))

for i in range(np.size(x)):
	a = "*"
	print(a*i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import numpy as np
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:02:39) 
-- CODE:
import numpy as np

x = np.array(eval(input("")))

for i in range(np.size(x)):
	a = "*"
	print(a*i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import numpy as np
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:02:41) 
-- CODE:
import numpy as np

x = np.array(eval(input("")))

for i in range(np.size(x)):
	a = "*"
	print(a*i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import numpy as np
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:02:43) 
-- CODE:
import numpy as np

x = np.array(eval(input("")))

for i in range(np.size(x)):
	a = "*"
	print(a*i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import numpy as np
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:02:51) 
-- CODE:
import numpy as np

x = np.array(eval(input("")))

for i in x:
	a = "*"
	print(a*i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import numpy as np
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 18:03:40) 
-- CODE:
import numpy as np

x = int(input(""))

for i in x:
	a = "*"
	print(a*i)
-- EXECUTION TIME:
1.16383
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2567/main.py", line 5, in <module>
    for i in x:
TypeError: 'int' object is not iterable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:03:40) 
-- CODE:
import numpy as np

x = int(input(""))

for i in x:
	a = "*"
	print(a*i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import numpy as np
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:03:54) 
-- CODE:
import numpy as np

x = int(input(""))

for i in range(x):
	a = "*"
	print(a*i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import numpy as np
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:04:23) 
-- CODE:
import numpy as np

x = int(input(""))

while i != x:
	a = "*"
	print(a*i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import numpy as np
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:04:29) 
-- CODE:
import numpy as np

x = int(input(""))

i = 0


while i != x:
	a = "*"
	print(a*i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import numpy as np
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:04:38) 
-- CODE:
import numpy as np

x = int(input(""))

i = 0


while i != x:
	a = "*"
	print(a*i)
	
	i += 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import numpy as np
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:04:41) 
-- CODE:
import numpy as np

x = int(input(""))

i = 0


while i != x:
	a = "*"
	print(a*i)
	
	i += 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import numpy as np
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:05:05) 
-- CODE:
import numpy as np

x = int(input(""))

i = -1


while i != x:
	a = "*"
	print(a*i)
	
	i -= 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import numpy as np
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:05:09) 
-- CODE:
import numpy as np

x = int(input(""))

i = -1


while i != x:
	a = "*"
	print(a*i)
	
	i -= 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import numpy as np
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:05:09) 
-- CODE:
import numpy as np

x = int(input(""))

i = -1


while i != x:
	a = "*"
	print(a*i)
	
	i -= 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import numpy as np
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:05:17) 
-- CODE:
import numpy as np

x = int(input(""))

i = -1


while i != x:
	a = "*"
	print(a*i)
	
	i -= 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import numpy as np
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:05:39) 
-- CODE:
import numpy as np

x = int(input(""))

i = -1


while i != -x:
	a = "*"
	print(a*i)
	
	i -= 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import numpy as np
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:05:48) 
-- CODE:
import numpy as np

x = int(input(""))

i = -1


while i != -x:
	a = "*"
	print(a*abs(i)
	
	i -= 1
-- ERROR:
File "XXXX", line 12
    i -= 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:05:52) 
-- CODE:
import numpy as np

x = int(input(""))

i = -1


while i != -x:
	a = "*"
	print(a*abs(i))
	
	i -= 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import numpy as np
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:05:56) 
-- CODE:
import numpy as np

x = int(input(""))

i = -1


while i != -x:
	a = "*"
	print(a*abs(i))
	
	i -= 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import numpy as np
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:06:07) 
-- CODE:
import numpy as np

x = int(input(""))

i = -1


while i != -x:
	a = "*"
	print(a*abs(i))
	
	i -= 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import numpy as np
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:06:09) 
-- CODE:
import numpy as np

x = int(input(""))

i = -1


while i != -x:
	a = "*"
	print(a*abs(i))
	
	i -= 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import numpy as np
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:06:20) 
-- CODE:
import numpy as np

x = int(input(""))

i = -1


while i != -x:
	a = "*"
	print(a*(abs(i)+1))
	
	i -= 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import numpy as np
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:07:05) 
-- CODE:
import numpy as np

x = int(input(""))
a = "*"

for i in x:
	print(a*(x-i))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import numpy as np
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:07:14) 
-- CODE:
import numpy as np

x = int(input(""))
a = "*"

for i in range(x):
	print(a*(x-i))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import numpy as np
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:07:15) 
-- CODE:
import numpy as np

x = int(input(""))
a = "*"

for i in range(x):
	print(a*(x-i))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import numpy as np
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:07:26) 
-- CODE:
import numpy as np

x = int(input(""))
a = "*"

for i in range(x):
	print(a*(x-i))
	print(a*i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import numpy as np
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:08:02) 
-- CODE:
import numpy as np

x = int(input(""))
a = "*"

for i in range(x):
	print(a*(x-i))

for i in range(x):
	print(a*(i+1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import numpy as np
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 18:08:07) 
-- CODE:
import numpy as np

x = int(input(""))
a = "*"

for i in range(x):
	print(a*(x-i))

for i in range(x):
	print(a*(i+1))
-- EXECUTION TIME:
1.1398
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 18:08:27) 
-- CODE:
x = int(input(""))
a = "*"

for i in range(x):
	print(a*(x-i))

for i in range(x):
	print(a*(i+1))
-- EXECUTION TIME:
0.705087
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
